--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Fable</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<canvas id="canvas" />
 		<script type="module" src="/Program.fs.js"></script>
 	</body>
 </html>
